# MicrosoftAgenticAI

./: .env.sample  .gitignore  LICENSE  README.md  agent_orchestrator_a2a.py  observability.py  pyproject.toml  smart_orchestrator.py  streamlit_app.py  streamlit_app_v1.py
bing_grounding_agent/: README.md  __init__.py  __main__.py  bing_grounding_agent.py  bing_grounding_agent_executor.py
databricks_agent/: README.md  __init__.py  __main__.py  databricks_agent.py  databricks_agent_executor.py
python_tool_agent/: __init__.py  __main__.py  python_tool_agent.py  python_tool_agent_executor.py  test_client.py
sql_foundry_agent/: __init__.py  __main__.py  sql_foundry_agent.py  sql_foundry_agent_executor.py  test_client.py
